mdapi/SurveyEnhancements/objects/Survey_Setting__mdt.object
<CustomObject>
    <label>Survey Setting</label>
    <pluralLabel>Survey Settings</pluralLabel>
    <fields>
        <fullName>Lookup_Id_Field__c</fullName>
        <description>Name of the lookup field on SurveyInvitation to store the Id</description>
        <inlineHelpText>This is the field used to create the look up to the parent record on the Survey Invitation object that will store the parent id</inlineHelpText>
        <label>Lookup Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <description>Id, Name or Url Path Prefix of Community, aka Network</description>
        <inlineHelpText>This is the Network Name AKA Community Name, from the Developer Name</inlineHelpText>
        <label>Network Name or Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Lookup_Query_Id_Field__c</fullName>
        <description>The field that is referred to for the participant query in the query</description>
        <inlineHelpText>Should be the only field from the query that is returned</inlineHelpText>
        <label>Participant Lookup Query Id Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Lookup_Query__c</fullName>
        <description>SOQL Query to get the Id of the participant from the record id context</description>
        <inlineHelpText>For example, if I had added a lookup to Case on the SurveyInvitation, the context of the component is the Case, and I would enter this query:

SELECT ContactId FROM Case WHERE Id = :contextId</inlineHelpText>
        <label>Participant Lookup Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>